--- a/themes/JustNews/index.html
+++ b/themes/JustNews/index.html
@@ -55,7 +55,7 @@
 					</nav>
 					<div class="navbar-action pull-right">
 						<div id="j-user-wrap">
-							<a class="login cur" href="/admin">登录</a>
+							<a class="login cur" href="/admin">管理</a>
 						</div>
 					</div>
 				</div>
@@ -152,7 +152,7 @@
 					</div>
 					<div id="categories-3" class="widget widget_categories">
 						<h3 class="widget-title">
-							<span>分类目录</span></h3>
+							<span>话题分类</span></h3>
 						<ul>
 							{{ #widgetCategoryList }}
 							<li class="cat-item cat-item-5 current-cat">
@@ -162,7 +162,7 @@
 					</div>
 					<div id="tag_cloud-3" class="widget widget_tag_cloud">
 						<h3 class="widget-title">
-							<span>标签</span></h3>
+							<span>标签云</span></h3>
 						<div class="tagcloud">
 							{{ #widgetTagsList }}
 							<a href="/tags/{{&.}}" class="tag-cloud-link tag-link-6 tag-link-position-1" style="font-size: 8pt;" aria-label="{{&.}}">{{&.}}</a>
@@ -172,7 +172,7 @@
 
 					<div id="linkcat-0" class="widget widget_links">
 						<h3 class="widget-title">
-							<span>链接</span></h3>
+							<span>友情链接</span></h3>
 						<ul class='xoxo blogroll'>
 							{{ #widgetLinkList }}
 									<li><a href="{{ &url }}" target="_blank">{{ &title }}</a></li>
