--- a/themes/JustNews/index.html
+++ b/themes/JustNews/index.html
@@ -52,6 +52,20 @@
 								<li class="menu-item"><a href="{{ &url }}">{{ &title }}</a></li>
 							{{ /widgetMenuList }}
 						</ul>
+						<li class="menu-item mr-3 mr-lg-0 d-none d-lg-block">
+    <script>
+        fetch('https://v1.hitokoto.cn')
+            .then(response => response.json())
+            .then(data => {
+                const hitokoto = document.getElementById('hitokoto_text');
+                hitokoto.href = 'https://hitokoto.cn/?uuid=' + data.uuid;
+                hitokoto.innerText = data.hitokoto;
+            })
+            .catch(console.error);
+    </script>
+    <div id="hitokoto"><a href="#" target="_blank" id="hitokoto_text">疏影横斜水清浅，暗香浮动月黄昏。</a></div>
+</li>
+
 					</nav>
 					<div class="navbar-action pull-right">
 						<div id="j-user-wrap">
