--- a/themes/JustNews/index.html
+++ b/themes/JustNews/index.html
@@ -191,6 +191,19 @@
 							{{ #widgetLinkList }}
 									<li><a href="{{ &url }}" target="_blank">{{ &title }}</a></li>
 							{{ /widgetLinkList }}
+
+    <script>
+        fetch('https://v1.hitokoto.cn')
+            .then(response => response.json())
+            .then(data => {
+                const hitokoto = document.getElementById('hitokoto_text');
+                hitokoto.href = 'https://hitokoto.cn/?uuid=' + data.uuid;
+                hitokoto.innerText = data.hitokoto;
+            })
+            .catch(console.error);
+    </script>
+    <div id="hitokoto"><a href="#" target="_blank" id="hitokoto_text">疏影横斜水清浅，暗香浮动月黄昏。</a></div>
+							
 						</ul>
 					</div>
 					{{ &OPT.widgetOther }}
